# coursework_2021

./: README.md  envoy.yaml  setup_envoy.sh  setup_envoy_podman.sh
server/: main.go  main_test.go
services/: CMakeLists.txt
services/assembly/: CMakeLists.txt  assembly_clientside_test.cpp  assembly_server.cpp
services/igrf/: CMakeLists.txt  igrf_clientside_test.cpp  igrf_server.cpp  noise_application.cpp  noise_application.h
services/igrf/igrf/: geomag70.c  license_note.txt
services/igrf/igrf/include/: geomag70.h
services/igrf/igrf/source/geomag70_linux/: geomag70  sample_coords.txt
services/igrf/proto/: sgp_service.proto
services/igrf/sgp4/include/: TimeSpan.h
services/proto/: CMakeLists.txt  assembly.proto  igrf_service.proto  sgp_service.proto
